modules/compiler/spirv-ll/test/spvasm/invalid-spir-v/opencl_debug_info_100_type_template_parameter_non_constant.spvasm
; Copyright (C) Codeplay Software Limited
;
; Licensed under the Apache License, Version 2.0 (the "License") with LLVM
; Exceptions; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
;     https://github.com/codeplaysoftware/oneapi-construction-kit/blob/main/LICENSE.txt
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
; WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
; License for the specific language governing permissions and limitations
; under the License.
;
; SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

; RUN: %if online-spirv-as %{ spirv-as --target-env spv1.1 -o %spv_file_s %s %}
; RUN: not spirv-ll-tool -a OpenCL -b 64 %spv_file_s 2>&1 | FileCheck %s

; CHECK: 'Value' %{{[0-9]+}}[%void] of DebugTypeTemplateParameter %{{[0-9]+}}[%T] is not an OpConstant

               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
          %2 = OpExtInstImport "OpenCL.DebugInfo.100"
               OpMemoryModel Physical64 OpenCL
               OpEntryPoint Kernel %5 "func"
          %8 = OpString "/tmp/test.cpp"
          %9 = OpString "//__CSK_MD5:18aa9ce738eaafc7b7b7181c19092815"
         %12 = OpString "func"
         %14 = OpString ""
         %15 = OpString "T"
               OpSource OpenCL_CPP 100000
               OpName %entry "entry"
               OpName %void "void"
               OpName %18 "T"
       %void = OpTypeVoid
          %4 = OpTypeFunction %void
         %10 = OpExtInst %void %2 DebugSource %8 %9
         %11 = OpExtInst %void %2 DebugCompilationUnit 65536 5 %10 OpenCL_CPP
         %13 = OpExtInst %void %2 DebugInfoNone
         %20 = OpExtInst %void %2 DebugFunction %12 %13 %10 1 0 %11 %14 FlagIsDefinition|FlagPrototyped|FlagIsOptimized 2 %5 %13
         ; This is an error - the operand 'Value' must be an OpConstant
         %18 = OpExtInst %void %2 DebugTypeTemplateParameter %15 %13 %void %10 0 0
         %21 = OpExtInst %void %2 DebugTypeTemplate %20 %18
          %5 = OpFunction %void None %4
      %entry = OpLabel
               OpReturn
               OpFunctionEnd
